--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
   "bugs": {
     "url": "https://github.com/al-bimani/alfarq/issues"
   },
-  "homepage": "https://github.com/al-bimani/alfarq#readme"
+  "homepage": "https://github.com/al-bimani/alfarq#readme",
+  "dependencies": {
+    "is-circular": "^1.0.2"
+  }
 }
